ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: enterprise-routing
  namespace: default
spec:
  virtualhost:
    fqdn: ingress.h2o-2-18171.h2o.vmware.com
    tls:
      secretName: ingress-tls
  includes:
  - name: my-nginx
    namespace: workloads
    conditions:
    - prefix: /nginx
  - name: harbor
    namespace: default
    conditions:
    - prefix: /harbor
  routes:
  - conditions:
    - prefix: /kuard1
    services:
      - name: kuard
        port: 80
    pathRewritePolicy:
      replacePrefix:
      - prefix: /kuard1
        replacement: /
  
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: harbor
  namespace: default
spec:
  virtualhost:
    tls:
      passthrough: true
  routes:
  - conditions:
    - prefix: /harbor
    services:
    - name: harbor
      port: 443
    pathRewritePolicy:
      replacePrefix:
      - prefix: /harbor
        replacement: /
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: my-nginx
  namespace: workloads
spec:
  routes:
  - services:
    - name: my-nginx
      port: 80
    conditions:
    - prefix: /nginx
    pathRewritePolicy:
      replacePrefix:
      - prefix: /nginx
        replacement: /
---
apiVersion: v1
kind: Service
metadata:
  name: harbor
  namespace: default
spec:
  type: ExternalName
  externalName: harbor.build.h2o-2-18171.h2o.vmware.com
  ports:
  - port: 443
